--- a/config/content.htm
+++ b/config/content.htm
@@ -11,6 +11,14 @@
 <p>分組網站:<a href="https://40823238.github.io/stage2-bg7/content/index.html">https://40823238.github.io/stage2-bg7/content/index.html</a></p>
 <p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p>
 <p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
+<p><strong>stage3-bg6:鍵盤控制機械手臂</strong></p>
+<p>使用軟體:solidworks2017 coppeliasim OBS</p>
+<p>分組倉儲:<a href="https://github.com/40823225/stage3-bg6">https://github.com/40823225/stage3-bg6</a></p>
+<p>分組網站:<a href="https://40823225.github.io/stage3-bg6/content/About.html">https://40823225.github.io/stage3-bg6/content/About.html</a></p>
+<p>gitter:</p>
+<p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
+<p></p>
+<p></p>
 <h1>W1</h1>
 <p>新增倉儲 架設小組及個人網頁</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/_CczNAIcH6Q" width="560"></iframe></p>
