--- a/content/About.html
+++ b/content/About.html
@@ -146,6 +146,14 @@ img.add_border {
 <p>分組網站:<a href="https://40823238.github.io/stage2-bg7/content/index.html">https://40823238.github.io/stage2-bg7/content/index.html</a></p>
 <p>gitter:<a href="https://gitter.im/stage2-bg7/community">https://gitter.im/stage2-bg7/community</a></p>
 <p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
+<p><strong>stage3-bg6:鍵盤控制機械手臂</strong></p>
+<p>使用軟體:solidworks2017 coppeliasim OBS</p>
+<p>分組倉儲:<a href="https://github.com/40823225/stage3-bg6">https://github.com/40823225/stage3-bg6</a></p>
+<p>分組網站:<a href="https://40823225.github.io/stage3-bg6/content/About.html">https://40823225.github.io/stage3-bg6/content/About.html</a></p>
+<p>gitter:</p>
+<p>discord:<a href="https://discord.com/invite/xkhgSc9aWb">https://discord.com/invite/xkhgSc9aWb</a></p>
+<p></p>
+<p></p>
 <br /> <a href='W1.html'>Next</a> >> W1</div>
         
     <!-- footer -->
