--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -302,6 +302,7 @@ else:
 <p>參考資料:</p>
 <p>40823251 Task1:<a href="https://40823251.github.io/cd2021/content/task1.html">https://40823251.github.io/cd2021/content/task1.html</a></p>
 <p>MDE Task1:<a href="http://mde.tw/cd2021/content/task1.html">http://mde.tw/cd2021/content/task1.html</a></p>
+<p>檔案下載:<a href="https://drive.google.com/file/d/1BoW9TrUODKVNYHYCwHsoCZIWbOIm7nZW/view?usp=sharing">https://drive.google.com/file/d/1BoW9TrUODKVNYHYCwHsoCZIWbOIm7nZW/view?usp=sharing</a></p>
 <p>執行影片</p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/ylr0DDICYko" title="YouTube video player" width="560"></iframe></p>
