--- a/content/W15.html
+++ b/content/W15.html
@@ -133,10 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">分組報告 << <a href='分組報告.html'>Previous</a> <a href='stage2-bg7-2.html'>Next</a> >> stage2-bg7-2<br /><h1>stage1-bg5-2</h1>
-<p>分工部分:建立倉儲及架設網站，編輯網站，找尋參考資料，繪製SolidWorks零件圖，Coppeliasim模擬，Reveal製作。</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/WTlvZlrDNqY" width="560"></iframe></p>
-<br />分組報告 << <a href='分組報告.html'>Previous</a> <a href='stage2-bg7-2.html'>Next</a> >> stage2-bg7-2</div>
+    <div id="tipue_search_content">task2 << <a href='task2.html'>Previous</a> <a href='影片字幕整理.html'>Next</a> >> 影片字幕整理<br /><h1>W15</h1>
+<br />task2 << <a href='task2.html'>Previous</a> <a href='影片字幕整理.html'>Next</a> >> 影片字幕整理</div>
         
     <!-- footer -->
       <div class="container">
