--- a/content/影片字幕整理.html
+++ b/content/影片字幕整理.html
@@ -134,7 +134,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <br /><h1>影片字幕整理</h1>
-<p>右下角可開啟字幕<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kzo_jGEVZ1E" title="YouTube video player" width="560"></iframe></p><br />W15 << <a href='W15.html'>Previous</a> </div>
+<p></p>
+<p>右下角可開啟字幕</p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Kzo_jGEVZ1E" title="YouTube video player" width="560"></iframe></p><br />W15 << <a href='W15.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
