--- a/content/報告.html
+++ b/content/報告.html
@@ -133,8 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">stage1-bg5-1 << <a href='stage1-bg5-1.html'>Previous</a> <a href='0412模擬(無球).html'>Next</a> >> 0412模擬(無球)<br /><h1>stage2-bg7-1</h1>
-<br />stage1-bg5-1 << <a href='stage1-bg5-1.html'>Previous</a> <a href='0412模擬(無球).html'>Next</a> >> 0412模擬(無球)</div>
+    <div id="tipue_search_content">0517 << <a href='0517.html'>Previous</a> <a href='stage1-bg5-2.html'>Next</a> >> stage1-bg5-2<br /><h1>報告</h1><br />0517 << <a href='0517.html'>Previous</a> <a href='stage1-bg5-2.html'>Next</a> >> stage1-bg5-2</div>
         
     <!-- footer -->
       <div class="container">
